--- a/styles.css
+++ b/styles.css
@@ -1109,6 +1109,13 @@ border-radius: 20px;
     padding: 80px;
     border: 3px solid rgb(118, 38, 118);
 }
+
+#form-details:hover{
+    border: 3px solid rgb(0, 0, 0);
+    box-shadow: -10px 10px 45px #a70af0;
+
+}
+
 #form-details form{
 width: 65%;
 display: flex;
@@ -1140,6 +1147,7 @@ align-items: flex-start;
     margin: 0;
     font-size: 13px;
     line-height: 25px;
+    text-shadow: none;
 }
 #form-details .people div p span{
     display: block;
